# opteryx

./: # THINGS TO DO  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  CLICKBENCH_INVESTIGATION.md  COMBINED_LEFT_JOIN_OPTIMIZATIONS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INNER_JOIN_OPTIMIZATION_SUMMARY.md  INNER_JOIN_PERFORMANCE_REVIEW.md  LEFT_JOIN_PERFORMANCE_ANALYSIS.md  LEFT_OUTER_JOIN_OPTIMIZATIONS.md  LICENSE  MANIFEST.in  Makefile  NOTICES.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_REVIEW.md  PERFORMANCE_SUMMARY.txt  PR_COMPARISON.md  QUICK_START_PERFORMANCE_FIX.md  README copy.md  README.md  REVIEW_GUIDE.md  REVIEW_SUMMARY.txt  SECURITY.md  SECURITY_REVIEW_REGEXP_REPLACE.md  SPLITTING_TEST_SHAPES_AND_ERRORS.md  SPLITTING_TEST_SHAPES_AND_ERRORS_SUMMARY.md  SQL_FEATURE_RECOMMENDATIONS.md  astronauts.parquet  benchmark_sql_utils.py  build-wheels.sh  build_counter.py  cli_example.py  current-version-benchmark.json  (+15 more)
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  WORKFLOWS_BEST_PRACTICES.md  WORKFLOW_RECOMMENDATIONS.md  build_number.py  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  chore_request.md  feature_request.md  improvement_request.md  release_checklist.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: application_inspector.yml  assign_bugs.yml  bill_of_materials.yml  build_counter.yaml  check_on_push.yaml  code_form.yaml  codeql.yaml  codesee-arch-diagram.yaml  documents.yaml  documents.yml  dynamic_analysis.yml  formatter.yml  fuzzer.yaml  on_push.yaml  on_release.yaml  regression_suite copy.yaml  regression_suite.yaml  regression_suite_311.yaml  regression_suite_arm.yaml  regression_suite_arm.yaml_disabled  regression_suite_mac.yaml  regression_suite_mac_ARM.yaml  regression_suite_mac_x86.yaml  regression_suite_pypy.yaml  regression_suite_python313t.yaml  regression_suite_windows.yaml  release.yaml  release_arm.yaml  secrets.yml  secrets_scanning.yaml  sonar_cloud.yaml  stargazer-thanks.yaml  stargazer_thanks.yaml  static_analysis.yaml  static_analysis.yml  test.yml  version_comment.yaml
Client Connectivity/01 Python/: index.html
Contributing Guide/01 Community/: index.html
Contributing Guide/CODE_OF_CONDUCT/: index.html
Contributing Guide/CONTRIBUTING/: index.html
Deployment/01 Configuration/: index.html
Deployment/02 Caching/: index.html
Deployment/02 Storage/: index.html
Deployment/04 Hosting/: index.html
Features/Schema Evolution/: index.html
Features/Time Travel/: index.html
Getting Started/: index.html
Presentations/: 202204 Introduction to Query Engines.md
Release Notes/Change Log/: index.html
Release Notes/Notices/: index.html
Release Notes/Version Goals/: index.html
SQL Reference/01 Introduction/: index.html
SQL Reference/02 Statements/: index.html
SQL Reference/04 Data Types/: index.html
SQL Reference/05 Expressions/: index.html
SQL Reference/06 Functions/: index.html
SQL Reference/07 Aggregates/: index.html
SQL Reference/08 Joins/: index.html
SQL Reference/09 Temporality/: index.html
SQL Reference/10 Sample Data/: index.html
SQL Reference/20 Advanced/: index.html
bench/: multiprocess_wrapper.py  parallel_reader.py  threaded_wrapper.py
blog/: 20220205 Writing a Query Engine.md  20220901 Lessons Learnt so Far.md  20221001 Storage.md
dev/: README.md  build-wheels.sh  build_counter.py  count_loc_basic.py  fix_cython_whitespace.py  generate_security_parquet_files.py  generate_test_parquet.py  requirements_embedded.txt
dev/documents/: DEMORGAN_EXTENSIONS_ANALYSIS.md  DEMORGAN_IMPLEMENTATION_COMPLETE.md  DEMORGAN_VISUAL_GUIDE.md  DEVELOPER_GUIDE.md  FAST_INT_PARSING.md  FINAL_SESSION_SUMMARY.md  IMPLEMENTATION_PLAN_FINAL.md  IMPLEMENTATION_SUMMARY.md  JSONL_PERFORMANCE_OPTIMIZATIONS.md  OPTIMIZATION_REVIEW_SUMMARY.md  OPTIMIZATION_STRATEGY_REVIEW.md  PERFORMANCE_ANALYSIS_INDEX.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_OPTIMIZATION_OPPORTUNITIES.md  PREDICATE_COMPACTION_IMPLEMENTATION.md  PREDICATE_COMPACTION_PLAN.md  PRIORITIZED_QUICK_WINS.md  QUICK_OPTIMIZATION_PLAN.md  SESSION_COMPLETE.md  SIMD_INTEGRATION_SUMMARY.md  SIMD_JSONL_ANALYSIS.md  SIMD_QUICK_REFERENCE.md  SIMD_USAGE_GUIDE.md  SUGGESTED_OPTIMIZATIONS_WITH_PROOF.md  list-hash-fastpath.md
docs/: .$documentation-diagrams-source.drawio.bkp  .$documentation-diagrams-source.drawio.dtmp  01 Getting Started.md  01 Installation.md  02 Getting Started.md  03 Client Connectivity.md  08 Version Goals.md  FOR_CLAUSE_PARSING.md  Getting Started.md  OPTIMIZATION_ARCHITECTURE.md  OPTIMIZATION_QUICK_REFERENCE.md  QUERY_OPTIMIZATION_STRATEGIES.md  README.md  REGEXP_REPLACE_OPTIMIZATION.md  REGEXP_REPLACE_RE2_OPTIMIZATION.md  REGEXP_REPLACE_RUST_OPTIMIZATION.md  SIMD_OPTIMIZATION_GUIDE.md  SUBSTRAIT.md  documentation-diagrams-source.drawio  homepage.html  index.md  ~$documentation-diagrams-source.drawio.bkp
docs/01 Getting Started/: 01 Installation.md  README.md
docs/02 Clients/: README.md  (+1 more)
examples/: README.md  disk_reader_usage.py  non_equi_join_example.py  simd_quote_finding.py  substrait_example.py
notebooks/: caching.ipynb  local_files.ipynb  readme.md  welcome.ipynb
opteryx/: __author__.py  __build__.py  __init__.py  __main__.py  __version__.py  attribute_types.py  command.py  config.py  connection.py  constants.py  cursor.py  debugging.py  exceptions.py  query.py  version.py
raptor/: __init__.py  optimizer.py
search/: search_index.json
src/: README.md  lib.rs  list_ops.rs  opteryx_dialect.rs  sqloxide.rs  temporal_parser.rs  visitor.rs
stylesheets/: extra.css
testdata/: PERMISSIONS_README.md  permissions.json  populate_hadro.py
tests/: __init__.py  eotr.py  requirements.txt  requirements_arm.txt  test_expressions.py  test_functions.py  test_reader_sql_parser.py  test_reader_sql_reader.py  test_relation.py  test_scratch.py  test_simd_env.py  test_version.py  tools.py
tools/: README.md
waddles/: __init__.py  connection.py  constants.py  query.py
(+1843 files in other folders)
