[package]
name = "compute"
version = "0.1.0"
authors = ["@joocer"]
edition = "2018"

[lib]
name = "compute"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"
ndarray = "0.15.3"
pythonize = "0.21"
serde = "1.0.171"

[dependencies.sqlparser]
version = "0.46.0"
features = ["serde", "visitor"]