[package]
name = "compute"
version = "0.1.0"
authors = ["@joocer"]
edition = "2018"

[lib]
name = "compute"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.3", features = ["extension-module", "abi3-py39"] }
numpy = "0.20"
ndarray = "0.15.3"
pythonize = "0.20"
serde = "1.0.171"

[dependencies.sqlparser]
version = "0.50.0"
features = ["serde", "visitor"]