[package]
name = "compute"
version = "0.1.0"
authors = ["@joocer"]
edition = "2021"

[lib]
name = "compute"
crate-type = ["cdylib"]

[dependencies]
pythonize = "0.27"
serde = "1.0.171"
regex = "1.10"

[dependencies.pyo3]
version = "0.27"
features = ["extension-module"]

[dependencies.sqlparser]
version = "0.59.0"
features = ["serde", "visitor"]